# RTL-WINDOWS-ADS-B-TRACKER

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
docker/: Dockerfile.windows-x64
docs/: ADSB_DECODER_INTEGRATION.md  AIRBAND_CANDIDATE_LEVEL_REVIEW.md  AIRBAND_CAPTURE_REVIEW.md  AIRBAND_CATALOG.md  AIRBAND_CROSS_PASS_VARIATION_REVIEW.md  AIRBAND_LISTENING.md  AIRBAND_MULTIPASS_OBSERVATION.md  AIRBAND_SEGMENT_VARIATION_REVIEW.md  AIRBAND_SURVEY_EXPORT.md  AIRBAND_SURVEY_PLAN.md  AIRBAND_SURVEY_REVIEW.md  AIRBAND_SURVEY_REVIEW_FILTER.md  AIRBAND_SURVEY_SCAN.md  ARCHITECTURE.md  BACKEND_API.md  CHATGPT_PI_PORT_FUNCTIONAL_ENHANCEMENTS_HANDOFF.md  DEVELOPMENT_WORKFLOW.md  NATIVE_DEVICE_PROBE.md  NOAA_AUDIO.md  NOAA_LIVE_AUDIO.md  RECEIVER_LOCATION.md  VERIFIED_WINDOWS_BASELINE.md  WEB_MAP_UI.md  WINDOWS_PI_V33_PORT_IMPLEMENTATION.md  WINDOWS_SERVICE_RELEASE.md
tools/: build_dump1090_windows.sh  build_native_device_probe.sh  build_windows_service_release.sh  build_windows_x64_image.sh  import_aircraft_hex_db.py  import_faa_airband_catalog.sh  patch_windows_pi_v33_features.py  restart_pi_port_service.sh  run_backend_dev.sh  run_pi_port_dev.sh  start_pi_port_service.sh  status_pi_port_service.sh  stop_pi_port_service.sh  test_airband_candidate_level_review.sh  test_airband_capture_review_action.sh  test_airband_catalog_api.sh  test_airband_cross_pass_variation_review.sh  test_airband_multipass_observation.sh  test_airband_segment_variation_review.sh  test_airband_survey_csv_export.sh  test_airband_survey_plan_api.sh  test_airband_survey_review_action.sh  (+9 more)
(+7 files in other folders)
